# solanaceae_ecosystem_zerotierfix

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cd.yml  ci.yml
plugins/: CMakeLists.txt  dice_tool.cpp  dice_tool.hpp  plugin_dice_tool.cpp  plugin_ngcft1.cpp  plugin_transfer_auto_accept.cpp  plugin_zox_ngc.cpp  plugin_zox_ngc_hs.cpp  transfer_auto_accept.cpp  transfer_auto_accept.hpp
